--- a/web/home.html
+++ b/web/home.html
@@ -18,12 +18,12 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html">Lucatic Enterprise</a>
+                    <a class="navbar-brand" href="home.html">Lucatic Enterprise</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">Equipo</a></li>
+                            <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="equipo.html">Equipo</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                             <li class="nav-item"><a class="nav-link" href="service.html">Servicios</a></li>
                         </ul>
