Modificaciones para personas mayores en home

--- a/web/home.html
+++ b/web/home.html
@@ -39,7 +39,7 @@
                                 <h1 class="display-5 fw-bolder text-white mb-2">Somos una compañía global de servicios profesionales, líder en capacidades digitales, de cloud y de seguridad</h1>
                                 <p class="lead fw-normal text-white-50 mb-4">Una amplia gama de servicios que transforma tu organización.</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-5 me-sm-3" href="service.html">Saber más</a>
+                                    <a class="btn btn-primary btn-lg px-5 me-sm-3" href="service.html">Saber más sobre los servicios</a>
                                 </div>
                             </div>
                         </div>
