cambios en servicio

--- a/web/service.html
+++ b/web/service.html
@@ -94,17 +94,17 @@
                                 <div class="card-body p-4 py-lg-5">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <div class="text-center">
-                                            <div class="h6 fw-bolder">Have more questions?</div>
+                                            <div class="h6 fw-bolder">¿Alguna pregunta?</div>
                                             <p class="text-muted mb-4">
-                                                Contact us at
+                                                Contactanos en nuestras redes sociales
                                                 <br />
-                                                <a href="#!">support@domain.com</a>
+                                                <a href="#!">https://github.com/guirimalo/LucaticEnterprise</a>
                                             </p>
-                                            <div class="h6 fw-bolder">Follow us</div>
-                                            <a class="fs-5 px-2 link-dark" href="#!"><i class="bi-twitter"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="#!"><i class="bi-facebook"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="#!"><i class="bi-linkedin"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="#!"><i class="bi-youtube"></i></a>
+                                            <div class="h6 fw-bolder">Síguenos</div>
+                                            <a class="fs-5 px-2 link-dark" href="https://github.com/guirimalo/LucaticEnterprise"><i class="bi-twitter"></i></a>
+                                            <a class="fs-5 px-2 link-dark" href="https://github.com/guirimalo/LucaticEnterprise"><i class="bi-facebook"></i></a>
+                                            <a class="fs-5 px-2 link-dark" href="https://github.com/guirimalo/LucaticEnterprise"><i class="bi-linkedin"></i></a>
+                                            <a class="fs-5 px-2 link-dark" href="https://github.com/guirimalo/LucaticEnterprise"><i class="bi-youtube"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -118,13 +118,13 @@
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2021</div></div>
+                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Lucatic Enterprise 2022</div></div>
                     <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
+                        <a class="link-light small" href="#!">Privacidad</a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
+                        <a class="link-light small" href="#!">Términos</a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
+                        <a class="link-light small" href="contact.html">Contacto</a>
                     </div>
                 </div>
             </div>
