Adaptacion de la web para personas ciegas y para personas con daltonismo

--- a/web/home.html
+++ b/web/home.html
@@ -22,10 +22,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="equipo.html">Equipo</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-                            <li class="nav-item"><a class="nav-link" href="service.html">Servicios</a></li>
+                            <li class="nav-item"><a class="nav-link" href="home.html"><u>Home</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="equipo.html"><u>Equipo</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html"><u>Contacto</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="service.html"><u>Servicios</u></a></li>
                         </ul>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                                 <h1 class="display-5 fw-bolder text-white mb-2">Somos una compañía global de servicios profesionales, líder en capacidades digitales, de cloud y de seguridad</h1>
                                 <p class="lead fw-normal text-white-50 mb-4">Una amplia gama de servicios que transforma tu organización.</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-5 me-sm-3" href="service.html">Saber más sobre los servicios</a>
+                                    <a class="btn btn-primary btn-lg px-5 me-sm-3" href="service.html"><u>Saber más sobre los servicios</u></a>
                                 </div>
                             </div>
                         </div>
