--- a/web/service.html
+++ b/web/service.html
@@ -22,10 +22,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="equipo.html">Equipo</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-                            <li class="nav-item"><a class="nav-link" href="service.html">Servicios</a></li>
+                            <li class="nav-item"><a class="nav-link" href="home.html"><u>Home</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="equipo.html"><u>Equipo</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html"><u>Contacto</u></a></li>
+                            <li class="nav-item"><a class="nav-link" href="service.html"><u>Servicios</u></a></li>
                         </ul>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                                             <p class="text-muted mb-4">
                                                 Contactanos en nuestras redes sociales
                                                 <br />
-                                                <a href="#!">https://github.com/guirimalo/LucaticEnterprise</a>
+                                                <a href="#!"><u>https://github.com/guirimalo/LucaticEnterprise</u></a>
                                             </p>
                                             <div class="h6 fw-bolder">Síguenos</div>
                                             <a class="fs-5 px-2 link-dark" href="https://github.com/guirimalo/LucaticEnterprise"><i class="bi-twitter"></i></a>
