--- a/web/service.html
+++ b/web/service.html
@@ -46,8 +46,8 @@
                                     <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Reinventa las posibilidades de tu empresa</button></h3>
                                     <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>El 84% de los ejecutivos cree que necesita utilizar la IA</strong>
-                                            para cumplir sus objetivos de crecimiento. Ya lo han hecho en casos concretos para generar eficiencias y aumentar la productividad, pero la introducción de la IA en toda la organización abre posibilidades totalmente nuevas. La pregunta es: ¿cómo hacerlo? Ahí es donde entra Applied Intelligence y nuestra metodología exclusiva para utilizar IA, analítica y automatización (y los datos necesarios para ello) de un modo que beneficie a todas las personas y todos los procesos. Nuestro equipo global de expertos trabajará contigo para invertir en las soluciones y servicios escalables que te permitan cumplir tus objetivos de negocio en menos tiempo. También facilitamos los cambios culturales necesarios para que tus empleados puedan contribuir a la innovación y el crecimiento continuos con IA y datos.
+                                            <p class="parrafo"><strong>El 84% de los ejecutivos cree que necesita utilizar la IA</strong>
+                                            para cumplir sus objetivos de crecimiento. Ya lo han hecho en casos concretos para generar eficiencias y aumentar la productividad, pero la introducción de la IA en toda la organización abre posibilidades totalmente nuevas. La pregunta es: ¿cómo hacerlo? Ahí es donde entra Applied Intelligence y nuestra metodología exclusiva para utilizar IA, analítica y automatización (y los datos necesarios para ello) de un modo que beneficie a todas las personas y todos los procesos. Nuestro equipo global de expertos trabajará contigo para invertir en las soluciones y servicios escalables que te permitan cumplir tus objetivos de negocio en menos tiempo. También facilitamos los cambios culturales necesarios para que tus empleados puedan contribuir a la innovación y el crecimiento continuos con IA y datos.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -55,7 +55,7 @@
                                     <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Compras por internet y publicidad</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>La inteligencia artificial se usa mucho para crear recomendaciones personalizadas para los consumidores,</strong> basadas, por ejemplo, en sus búsquedas y compras previas o en otros comportamientos en línea. La IA es muy importante en el comercio, para optimizar los producos, planear el inventario, procesos logísticos, etc.
+                                            <p class="parrafo"><strong>La inteligencia artificial se usa mucho para crear recomendaciones personalizadas para los consumidores,</strong> basadas, por ejemplo, en sus búsquedas y compras previas o en otros comportamientos en línea. La IA es muy importante en el comercio, para optimizar los producos, planear el inventario, procesos logísticos, etc.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -63,7 +63,7 @@
                                     <h3 class="accordion-header" id="headingThree"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Casas, ciudades e infraestructuras inteligentes</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>Los termostatos inteligentes aprenden de nuestro comportamiento para ahorrar energía,</strong>mientras que los desarrolladores de ciudades inteligentes esperan poder regular el tráfico para mejorar la conectividad y reducir los atascos.
+                                            <p class="parrafo"><strong>Los termostatos inteligentes aprenden de nuestro comportamiento para ahorrar energía,</strong>mientras que los desarrolladores de ciudades inteligentes esperan poder regular el tráfico para mejorar la conectividad y reducir los atascos.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -75,7 +75,7 @@
                                     <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Las estrategias sostenibles potencian el éxito</button></h3>
                                     <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
-                                            <strong>Los mercados actuales se están viendo sacudidos por nuevas fuerzas estructurales: </strong>el cambio de actitud de los consumidores hacia las marcas responsables, los cambios organizativos hacia las energías renovables y la innovación continua en los modelos de negocio circulares. El momento de actuar es ahora.
+                                            <p class="parrafo"><strong>Los mercados actuales se están viendo sacudidos por nuevas fuerzas estructurales: </strong>el cambio de actitud de los consumidores hacia las marcas responsables, los cambios organizativos hacia las energías renovables y la innovación continua en los modelos de negocio circulares. El momento de actuar es ahora.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -83,7 +83,7 @@
                                     <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Cómo están respondiendo las empresas al desafío</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
-                                            <strong>Las empresas de éxito están creando valor sostenible al centrarse en tres prioridades:</strong>diseñar nuevos modelos de negocio en torno al crecimiento y los clientes, reducir costes y aumentar la rentabilidad, y forjar y mantener la confianza.
+                                            <p class="parrafo"><strong>Las empresas de éxito están creando valor sostenible al centrarse en tres prioridades:</strong>diseñar nuevos modelos de negocio en torno al crecimiento y los clientes, reducir costes y aumentar la rentabilidad, y forjar y mantener la confianza.</p>>
                                         </div>
                                     </div>
                                 </div>
