--- a/web/service.html
+++ b/web/service.html
@@ -72,16 +72,16 @@
                             <h2 class="fw-bolder mb-3">Sostenibilidad</h2>
                             <div class="accordion mb-5 mb-xl-0" id="accordionExample2">
                                 <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Las estrategias sostenibles potencian el éxito</button></h3>
-                                    <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample2">
+                                    <h3 class="accordion-header" id="headingFour"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">Las estrategias sostenibles potencian el éxito</button></h3>
+                                    <div class="accordion-collapse collapse show" id="collapseFour" aria-labelledby="headingFour" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
                                             <p class="parrafo"><strong>Los mercados actuales se están viendo sacudidos por nuevas fuerzas estructurales: </strong>el cambio de actitud de los consumidores hacia las marcas responsables, los cambios organizativos hacia las energías renovables y la innovación continua en los modelos de negocio circulares. El momento de actuar es ahora.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Cómo están respondiendo las empresas al desafío</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample2">
+                                    <h3 class="accordion-header" id="headingFive"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Cómo están respondiendo las empresas al desafío</button></h3>
+                                    <div class="accordion-collapse collapse" id="collapseFive" aria-labelledby="headingFive" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
                                             <p class="parrafo"><strong>Las empresas de éxito están creando valor sostenible al centrarse en tres prioridades:</strong>diseñar nuevos modelos de negocio en torno al crecimiento y los clientes, reducir costes y aumentar la rentabilidad, y forjar y mantener la confianza.</p>>
                                         </div>
