--- a/web/equipo.html
+++ b/web/equipo.html
@@ -69,7 +69,7 @@
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/Ivan.jpg" alt="..." />
                                 <h5 class="fw-bolder">Ivan Juarez Rincon</h5>
-                                <div class="fst-italic text-muted">Desarrollador Java &amp; C# </br> Ilusionado por la vida</div>
+                                <div class="fst-italic text-muted">Desarrollador Java &amp; C# <br> Ilusionado por la vida</div>
                             </div>
                         </div>
                         <div class="col mb-5">
