Descripcion bayo añadida

--- a/web/equipo.html
+++ b/web/equipo.html
@@ -69,14 +69,14 @@
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/Ivan.jpg" alt="..." />
                                 <h5 class="fw-bolder">Ivan Juarez Rincon</h5>
-                                <div class="fst-italic text-muted">Desarrollador Java &amp; C# <br> Ilusionado por la vida</div>
+                                <div class="fst-italic text-muted">Desarrollador Java &amp; C# Junior<br> Tester en proceso <br> "Ilusionado por la vida"</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/bayo.png" alt="..." />
                                 <h5 class="fw-bolder">Miguel A. Puerta Bayo</h5>
-                                <div class="fst-italic text-muted">Breve descripcion de cada uno</div>
+                                <div class="fst-italic text-muted">Tester y dev programmer Junior. <br>Mis lenguajes de programación preferidos es Java y C#. <br>"A la cama no te irás sin saber una cosa más".</div>
                             </div>
                         </div>
                     </div>
