--- a/web/contact.html
+++ b/web/contact.html
@@ -54,7 +54,7 @@
                                     <!-- Name input-->
                                     <div class="form-floating mb-3">
                                         <input id="nombre" name="nombre" type="text" placeholder="Nombre completo" class="form-control" required>
-                                        <label for="name">Nombre completo</label>
+                                        <label for="nombre">Nombre completo</label>
                                         <div class="invalid-feedback" data-sb-feedback="name:required">Debes escribir tu nombre</div>
                                     </div>
                                     <!-- Email address input-->
@@ -65,26 +65,26 @@
                                     </div>
                                     <!-- Phone number input-->
                                     <div class="form-floating mb-3">
-                                        <input type="number" id="teléfono" name="teléfono" placeholder="Teléfono" class="form-control" required>
-                                        <label for="phone">Teléfono</label>
+                                        <input type="number" id="telefono" name="telefono" placeholder="Teléfono" class="form-control" required>
+                                        <label for="telefono">Teléfono</label>
                                         <div class="invalid-feedback" data-sb-feedback="phone:required">Debes poner tu teléfono</div>
                                     </div>
                                     <!-- Message input-->
                                     <div class="form-floating mb-3">
                                         <textarea class="form-control" id="mensaje" name="mensaje" placeholder="Escribe aquí tu mensaje." rows="7" required></textarea>
-                                        <label for="message">Mensaje</label>
+                                        <label for="mensaje">Mensaje</label>
                                         <div class="invalid-feedback" data-sb-feedback="message:required">Debes escribir un mensaje</div>
                                     </div>
                                     <div class="form-floating mb-3">
                                     <div class="col-md-8">
                                         <input class="form-check-input" type="checkbox" value="" id="chekedad" required>
-                                        <label class="form-check-label" for="flexCheckChecked">
+                                        <label class="form-check-label" for="chekedad">
                                             Confirmo que soy mayor de edad
                                         </label>
                                     </div>
                                     <div class="col-md-8">
                                        <input class="form-check-input" type="checkbox" value="" id="chekedprivacidad" required>
-                                        <label class="form-check-label" for="flexCheckChecked">
+                                        <label class="chekedprivacidad" for="chekedprivacidad">
                                             Acpeto la política de privacidad
                                         </label>
                                     </div>
