--- a/web/contact.html
+++ b/web/contact.html
@@ -49,42 +49,42 @@
                                 <!-- To make this form functional, sign up at-->
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
-                                <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="/api/clientes/add"
+                               <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="/api/clientes/add"
                                 enctype="application/x-www-form-urlencoded" method="post">
                                     <!-- Name input-->
                                     <div class="form-floating mb-3">
                                         <input id="nombre" name="nombre" type="text" placeholder="Nombre completo" class="form-control" required>
-                                        <label for="nombre">Nombre completo</label>
+                                        <label for="name">Nombre completo</label>
                                         <div class="invalid-feedback" data-sb-feedback="name:required">Debes escribir tu nombre</div>
                                     </div>
                                     <!-- Email address input-->
                                     <div class="form-floating mb-3">
                                         <input type="email" id="email" name="email" placeholder="Email" class="form-control" required>
                                         <label for="email">Email</label>
-                                
+ 
                                     </div>
                                     <!-- Phone number input-->
                                     <div class="form-floating mb-3">
-                                        <input type="number" id="telefono" name="telefono" placeholder="Teléfono" class="form-control" required>
-                                        <label for="telefono">Teléfono</label>
+                                        <input type="number" id="teléfono" name="teléfono" placeholder="Teléfono" class="form-control" required>
+                                        <label for="phone">Teléfono</label>
                                         <div class="invalid-feedback" data-sb-feedback="phone:required">Debes poner tu teléfono</div>
                                     </div>
                                     <!-- Message input-->
                                     <div class="form-floating mb-3">
                                         <textarea class="form-control" id="mensaje" name="mensaje" placeholder="Escribe aquí tu mensaje." rows="7" required></textarea>
-                                        <label for="mensaje">Mensaje</label>
+                                        <label for="message">Mensaje</label>
                                         <div class="invalid-feedback" data-sb-feedback="message:required">Debes escribir un mensaje</div>
                                     </div>
                                     <div class="form-floating mb-3">
                                     <div class="col-md-8">
                                         <input class="form-check-input" type="checkbox" value="" id="chekedad" required>
-                                        <label class="form-check-label" for="chekedad">
+                                        <label class="form-check-label" for="flexCheckChecked">
                                             Confirmo que soy mayor de edad
                                         </label>
                                     </div>
                                     <div class="col-md-8">
                                        <input class="form-check-input" type="checkbox" value="" id="chekedprivacidad" required>
-                                        <label class="chekedprivacidad" for="chekedprivacidad">
+                                        <label class="form-check-label" for="flexCheckChecked">
                                             Acpeto la política de privacidad
                                         </label>
                                     </div>
@@ -102,13 +102,13 @@
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Lucatic Enterprise</div></div>
+                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2021</div></div>
                     <div class="col-auto">
-                        <a class="link-light small" href="https://academiaqa.com/politica-de-privacidad/">Privacidad</a>
+                        <a class="link-light small" href="#!">Privacy</a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="https://ideasparatuempresa.vodafone.es/glosario-de-terminos/">Terminos</a>
+                        <a class="link-light small" href="#!">Terms</a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="contact.html">Contacto</a>
+                        <a class="link-light small" href="#!">Contact</a>
                     </div>
                 </div>
             </div>
