--- a/web/equipo.html
+++ b/web/equipo.html
@@ -55,7 +55,7 @@
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/David.jpg" alt="..." />
                                 <h5 class="fw-bolder">David G. Hernandez Irazabal</h5>
-                                <div class="fst-italic text-muted">Breve descripcion de cada uno</div>
+                                <div class="fst-italic text-muted">Joven y futuro programador<br>Apasionado por aprender<br>Loves traveling</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
@@ -87,7 +87,7 @@
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Lucatic Enterprise</div></div>
+                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Lucatic Enterprise 2022</div></div>
                     <div class="col-auto">
                         <a class="link-light small" href="https://academiaqa.com/politica-de-privacidad/">Privacidad</a>
                         <span class="text-white mx-1">&middot;</span>
