descripcion de Gema y David editada y finalizada

--- a/web/equipo.html
+++ b/web/equipo.html
@@ -55,14 +55,14 @@
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/David.jpg" alt="..." />
                                 <h5 class="fw-bolder">David G. Hernandez Irazabal</h5>
-                                <div class="fst-italic text-muted">Joven y futuro programador<br>Apasionado por aprender<br>Loves traveling</div>
+                                <div class="fst-italic text-muted">Joven y futuro programador<br>de ciencias y acuario<br>Loves traveling</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/gema.jpg" alt="..." />
                                 <h5 class="fw-bolder">Gema Lopez Morales</h5>
-                                <div class="fst-italic text-muted">Breve descripcion de cada uno</div>
+                                <div class="fst-italic text-muted">Estudiante de QA testing.<br>"Sé tu mayor competidor. Desafiate cada día a ti mismo para ser mejor de lo que fuiste ayer"</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
